--- a/ProgramList.TelerikPOC/Views/ProgramListView.xaml
+++ b/ProgramList.TelerikPOC/Views/ProgramListView.xaml
@@ -20,17 +20,25 @@
                              IsReadOnlyBinding="{Binding IsReadOnly}"
                              EnableRowVirtualization="True"
                              EnableColumnVirtualization="True"
-                             ValidatesOnDataErrors="InEditMode"
+                             ValidatesOnDataErrors="None"
                              IsFilteringAllowed="True"
+                             
+                             FilteringMode="Popup"
+                             ShowColumnFooters ="True"
+                             ShowColumnHeaders="True"
+                             ShowColumnSortIndexes="True"
+                             ShowGroupFooters="True"
                              ShowGroupPanel="True"
+                             ShowSearchPanel="True"
+                             ShowToolTipOnTrimmedText="True"
+                             
                              RowIndicatorVisibility="Visible"
                              CanUserReorderColumns="True"
                              CanUserResizeColumns="True"
                              CanUserSortColumns ="True"
                              CanUserDeleteRows="False"
                              CanUserInsertRows ="False"
-                             ShowColumnFooters ="True"
-                             SelectionMode="Multiple"
+                             SelectionMode="Extended"
                              SelectionUnit="Mixed"
                              CanUserSelectColumns="True"
                              
