--- a/ProgramList.TelerikPOC/App.xaml
+++ b/ProgramList.TelerikPOC/App.xaml
@@ -15,13 +15,13 @@
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Office_Black;component/Themes/Telerik.Windows.Controls.GridView.xaml" />
                 
                 
-                <ResourceDictionary Source="Styles/ProgramListDictionary.xaml" />
+                <!--<ResourceDictionary Source="Styles/ProgramListDictionary.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="telerik:GridViewRow" BasedOn="{StaticResource GridViewRowCoreValidationStyle}" >
                 <Setter Property="IsInEditMode" Value="{Binding IsInEditMode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Style>
-            <Style TargetType="telerik:GridViewCell" BasedOn="{StaticResource GridViewCellCoreValidationStyle}" />
-            <Style TargetType="telerik:TreeListViewRow" BasedOn="{StaticResource TreeListViewRowCoreValidationStyle}" />
+            <!--<Style TargetType="telerik:GridViewCell" BasedOn="{StaticResource GridViewCellCoreValidationStyle}" />
+            <Style TargetType="telerik:TreeListViewRow" BasedOn="{StaticResource TreeListViewRowCoreValidationStyle}" />-->
             <!--<Style TargetType="telerik:GridViewRow">
                 <Setter Property="IsInEditMode" Value="{Binding IsInEditMode, Mode=TwoWay }"/>
                 --><!--<Setter Property="IsInEditMode" Value="{Binding IsInEditMode, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"/>--><!--
