--- a/ProgramList.TelerikPOC/MainWindow.xaml
+++ b/ProgramList.TelerikPOC/MainWindow.xaml
@@ -7,9 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" WindowState="Maximized">
     <Grid>
-        <StackPanel Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal">
-            <Button x:Name="LoadGrid" Margin="10,0,0,0" Width="150" Click="LoadGrid_Click" Content="Load Grid" />
-        </StackPanel>
-        <Border x:Name="PlaceHolder" Margin="0,45,0,0" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" x:Name="Clear" HorizontalAlignment="Left" Margin="10,0,0,0" Width="150" Click="Clear_Click" Content="Clear Grid" />
+        <Button Grid.Row="0"  x:Name="LoadGrid"  HorizontalAlignment="Left" Margin="200,0,0,0" Width="150" Click="LoadGrid_Click" Content="Load Grid" />
+
+        <My:ProgramListView Grid.Row="1"  x:Name="ProgramList" />
     </Grid>
 </Window>
