--- a/ProgramList.TelerikPOC/MainWindow.xaml
+++ b/ProgramList.TelerikPOC/MainWindow.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
         <Button Grid.Row="0" x:Name="Clear" HorizontalAlignment="Left" Margin="10,0,0,0" Width="150" Click="Clear_Click" Content="Clear Grid" />
         <Button Grid.Row="0"  x:Name="LoadGrid"  HorizontalAlignment="Left" Margin="200,0,0,0" Width="150" Click="LoadGrid_Click" Content="Load Grid" />
-
+        <TextBlock x:Name="LoadTime" Grid.Row="0" Margin="400,0,0,0" />
         <My:ProgramListView Grid.Row="1"  x:Name="ProgramList" />
     </Grid>
 </Window>
