--- a/DevX/ProgramList.Devx/Views/ProgramListView.xaml
+++ b/DevX/ProgramList.Devx/Views/ProgramListView.xaml
@@ -5,9 +5,44 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProgramList.DevX.Views"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" x:Class="ProgramList.DevX.Views.ProgramListView"
+             xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"          
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <DataTemplate x:Key="DefaultColumnTemplate">
+            <ContentControl>
+                <dxg:GridColumn FieldName="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}" 
+                Header="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Header, RelativeSource={RelativeSource Self}}" 
+                Width="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Width, RelativeSource={RelativeSource Self}}" />
+            </ContentControl>
+        </DataTemplate>
 
-    <dxg:GridControl AutoGenerateColumns="AddNew" EnableSmartColumnsGeneration="True">
+        <Style x:Key="ColumnStyle" TargetType="dxg:GridColumn">
+            <Setter Property="FilterPopupMode" Value="CheckedList"/>
+            <Setter Property="FieldName" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}"/>
+        </Style>
+    </UserControl.Resources>
+    <dxg:GridControl x:Name="ListGrid" 
+                     ItemsSource="{Binding Path=GridData}" 
+                     ColumnsSource="{Binding Columns}"
+                      
+                     >
+        <dxg:GridControl.View>
+            <dxg:TableView AllowPerPixelScrolling="True" ShowTotalSummary="True"/>
+        </dxg:GridControl.View>
     </dxg:GridControl>
+
+    <!--<dxg:GridControl x:Name="ListGrid" 
+                     ItemsSource="{Binding Path=GridData}" 
+                     ColumnsSource="{Binding Columns}"
+                     ColumnGeneratorStyle="{StaticResource ColumnStyle}"
+                     ColumnGeneratorTemplate="{StaticResource DefaultColumnTemplate}"
+                     >
+        <dxg:GridControl.View>
+            <dxg:TableView x:Name="view" NavigationStyle="Cell" AutoWidth="True"
+                               AllowPerPixelScrolling="True" ShowTotalSummary="True"
+                               IsTotalSummaryMenuEnabled="False"/>
+        </dxg:GridControl.View>
+    </dxg:GridControl>-->
+    
 </UserControl>
