--- a/DevX/ProgramList.Devx/Views/ProgramListView.xaml
+++ b/DevX/ProgramList.Devx/Views/ProgramListView.xaml
@@ -4,24 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProgramList.DevX.Views"
-             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" x:Class="ProgramList.DevX.Views.ProgramListView"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+             x:Class="ProgramList.DevX.Views.ProgramListView"
              xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"          
              mc:Ignorable="d" 
              Width="auto"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <DataTemplate x:Key="DefaultColumnTemplate">
-            <ContentControl>
-                <dxg:GridColumn FieldName="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}" 
-                Header="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Header, RelativeSource={RelativeSource Self}}" 
-                Width="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Width, RelativeSource={RelativeSource Self}}" />
-            </ContentControl>
+        <DataTemplate xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"  
+                      x:Key="DefaultColumnTemplate">
+            <dx:SimpleButton Content="AAA" Command="" />
         </DataTemplate>
-
-        <Style x:Key="ColumnStyle" TargetType="dxg:GridColumn">
-            <Setter Property="FilterPopupMode" Value="CheckedList"/>
-            <Setter Property="FieldName" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}"/>
-        </Style>
     </UserControl.Resources>
     <dxg:GridControl x:Name="ListGrid" 
                      ItemsSource="{Binding Path=GridData}" 
