--- a/Infragistics/ProgramList.Infragistics/Views/ProgramListView.xaml
+++ b/Infragistics/ProgramList.Infragistics/Views/ProgramListView.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="ProgramList.Infragistics.Views.ProgramListView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProgramList.Infragistics.Views"
+             xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
+             xmlns:ig="http://schemas.infragistics.com/xaml" x:Class="ProgramList.Infragistics.Views.ProgramListView"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+
+    <igWPF:XamDataGrid />
 </UserControl>
