fixed cell binding

--- a/C1/ProgramList.C1FlexGrid/Views/ProgramListView.xaml
+++ b/C1/ProgramList.C1FlexGrid/Views/ProgramListView.xaml
@@ -11,6 +11,7 @@
         <c1:C1FlexGrid Grid.Row="1"
         x:Name="ListGrid" 
         ItemsSource="{Binding GridData}"
+                       AutoGenerateColumns="False"
         >
         </c1:C1FlexGrid>
     </Grid>
