--- a/DevX/ProgramList.Devx/Views/ProgramListView.xaml
+++ b/DevX/ProgramList.Devx/Views/ProgramListView.xaml
@@ -13,7 +13,8 @@
     <dxg:GridControl x:Name="ListGrid" 
                      ItemsSource="{Binding Path=GridData}" 
                      ColumnsSource="{Binding Columns}"
-                      
+                     SelectionMode="Row"
+                     
                      >
         <dxg:GridControl.View>
             <My:MyTableView 
@@ -23,7 +24,7 @@
                 AllowBestFit="True" 
                 AllowColumnMoving="True"
                 AllowResizing="True"
-                MultiSelectMode="Cell"
+                NavigationStyle="Cell"
                 />
         </dxg:GridControl.View>
     </dxg:GridControl>
