--- a/DevX/ProgramList.Devx/Views/ProgramListView.xaml
+++ b/DevX/ProgramList.Devx/Views/ProgramListView.xaml
@@ -13,7 +13,7 @@
     <dxg:GridControl x:Name="ListGrid" 
                      ItemsSource="{Binding Path=GridData}" 
                      ColumnsSource="{Binding Columns}"
-                     SelectionMode="Row"
+                     SelectionMode="Cell"
                      
                      >
         <dxg:GridControl.View>
