--- a/DevX/DevX.PerformanceTest/MainWindow.xaml
+++ b/DevX/DevX.PerformanceTest/MainWindow.xaml
@@ -5,9 +5,34 @@
         xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
         xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
         Title="MainWindow" WindowState="Maximized">
+    <Grid>
+        <TextBox MinWidth="100" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                 Text="{Binding SearchString, ElementName=MyTableView, UpdateSourceTrigger=PropertyChanged, Delay=200}" Margin="0,0,0,0" Height="20" />
+        <dxg:GridControl HorizontalAlignment="Left" VerticalAlignment="Top" 
+                     x:Name="ListGrid" Margin="0,20,0,0"
+                     ItemsSource="{Binding}" 
+                     >
+            <dxg:GridControl.Columns>
+                <dxg:GridColumn Header="Id"     FieldName="Id"      Binding="{Binding Id}"   />
+                <dxg:GridColumn Header="Active" FieldName="Active"  Binding="{Binding Active}"   />
+                <dxg:GridColumn Header="Prop01" FieldName="Prop01"  Binding="{Binding Prop01}"   />
+                <dxg:GridColumn Header="Prop02" FieldName="Prop02"  Binding="{Binding Prop02}"   />
+                <dxg:GridColumn Header="Prop03" FieldName="Prop03"  Binding="{Binding Prop03}"   />
+                <dxg:GridColumn Header="Prop04" FieldName="Prop04"  Binding="{Binding Prop04}"   />
+                <dxg:GridColumn Header="Prop05" FieldName="Prop05"  Binding="{Binding Prop05}"   />
+                <dxg:GridColumn Header="Prop06" FieldName="Prop06"  Binding="{Binding Prop06}"   />
+                <dxg:GridColumn Header="Prop07" FieldName="Prop07"  Binding="{Binding Prop07}"   />
+                <dxg:GridColumn Header="Prop08" FieldName="Prop08"  Binding="{Binding Prop08}"   />
+            </dxg:GridControl.Columns>
+            <dxg:GridControl.View>
+                <dxg:TableView Name="MyTableView"
+                ShowSearchPanelMode="Always"
+                >
 
-    <dxg:GridControl x:Name="ListGrid" 
-                     ItemsSource="{Binding Path=GridData}" 
-                     ColumnsSource="{Binding Columns}"
-                     />
+                </dxg:TableView>
+            </dxg:GridControl.View>
+        </dxg:GridControl>
+
+        <!--ColumnsSource="{Binding Columns}"-->
+    </Grid>
 </dx:ThemedWindow>
